<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"

    android:layout_height="match_parent"
    android:background="@color/Primary_Color"
    android:orientation="vertical"
    tools:context=".Activities.Add_Pg_Activity">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_10sdp"
        android:paddingLeft="@dimen/_4sdp"
        android:paddingRight="@dimen/_4sdp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <ImageView
            android:id="@+id/home_menu"
            android:layout_width="@dimen/_26sdp"
            android:layout_height="@dimen/_18sdp"
            android:layout_marginStart="4sp"
            android:onClick="backActivity"
            android:src="@drawable/ic_arrow_back_btn"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:tint="@color/m_black" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/airbnb_cereal_medium"
            android:src="@drawable/ic_menu"
            android:text="@string/add_new_pg"
            android:textColor="@color/m_black"
            android:textSize="@dimen/_22sdp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:tint="@color/m_black" />


    </androidx.constraintlayout.widget.ConstraintLayout>


    <ScrollView
        android:layout_width="match_parent"

        android:layout_height="match_parent"
        android:layout_marginBottom="@dimen/_24sdp"
        android:scrollbars="none">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_8sdp"
            android:orientation="vertical"
            android:padding="@dimen/_16sdp">


            <TextView

                style="@style/CategoryStyle"
                android:text="@string/address_line_1" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/addTL"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_4sdp"
                android:hint="@string/enter_address"
                app:boxBackgroundColor="@color/white"
                app:endIconMode="clear_text"
                app:endIconTint="@color/m_black">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text" />


            </com.google.android.material.textfield.TextInputLayout>

            <TextView

                style="@style/CategoryStyle"
                android:text="@string/city" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/cityTL"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_4sdp"
                android:hint="@string/enter_city_name"
                app:boxBackgroundColor="@color/white"
                app:endIconMode="clear_text"
                app:endIconTint="@color/m_black">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text" />


            </com.google.android.material.textfield.TextInputLayout>

            <TextView

                style="@style/CategoryStyle"
                android:text="@string/state" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/stateTL"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_4sdp"
                android:hint="@string/enter_state_name"
                app:boxBackgroundColor="@color/white"
                app:endIconMode="clear_text"
                app:endIconTint="@color/m_black">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text" />


            </com.google.android.material.textfield.TextInputLayout>

            <TextView

                style="@style/CategoryStyle"
                android:text="@string/pincode" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/pinCodeTL"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_4sdp"
                android:hint="@string/pin_code"
                app:boxBackgroundColor="@color/white"
                app:endIconMode="clear_text"
                app:endIconTint="@color/m_black">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="number" />


            </com.google.android.material.textfield.TextInputLayout>


            <LinearLayout
                android:layout_width="match_parent"

                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_16sdp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/airbnb_cereal_medium"
                    android:text="@string/base_price"
                    android:textColor="@color/m_black"
                    android:textSize="@dimen/_14sdp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/_8sdp"
                    android:layout_weight="1"
                    android:padding="@dimen/_4sdp"
                    android:text="@string/average_price_per_month"
                    android:textColor="@color/m_black"
                    android:textSize="@dimen/_10sdp" />

            </LinearLayout>


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/basePrcTL"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_4sdp"
                android:hint="Base Price"
                app:boxBackgroundColor="@color/white"
                app:endIconMode="clear_text"
                app:endIconTint="@color/m_black"
                app:helperTextTextColor="@color/m_black"
                app:suffixText="/month"
                app:suffixTextColor="@color/m_black">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="number" />


            </com.google.android.material.textfield.TextInputLayout>

            <TextView

                style="@style/CategoryStyle"
                android:text="@string/facilities" />

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense.ExposedDropdownMenu"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_4sdp"
                android:hint="@string/select"
                app:boxBackgroundColor="@color/white">


                <com.google.android.material.textfield.MaterialAutoCompleteTextView
                    android:id="@+id/actv"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:enabled="false"
                    android:inputType="none"
                    android:textColor="@color/black" />


            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.chip.ChipGroup
                android:id="@+id/chipGrp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_8sdp">


            </com.google.android.material.chip.ChipGroup>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_16sdp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/airbnb_cereal_medium"
                    android:text="@string/upload_picture"
                    android:textColor="@color/m_black"
                    android:textSize="@dimen/_14sdp" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_8sdp"
                    android:layout_weight="1"
                    android:padding="@dimen/_4sdp"
                    android:text="@string/max_6_images"
                    android:textColor="@color/m_black"
                    android:textSize="@dimen/_10sdp" />

            </LinearLayout>


            <Button
                android:id="@+id/selectImages"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/_10sdp"
                android:backgroundTint="@color/white"
                android:text="@string/select_images"
                android:textColor="@color/m_black" />


            <androidx.recyclerview.widget.RecyclerView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/imageRecyclerV"/>


            <Button
                android:id="@+id/submitDetails"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/_26sdp"
                android:background="@drawable/background_btn"
                android:minWidth="@dimen/_100sdp"
                android:onClick="saveDetails"
                android:text="@string/save"
                android:textAllCaps="true"
                android:textColor="@color/white" />


        </LinearLayout>


    </ScrollView>


</LinearLayout>