<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/Primary_Color"
    android:orientation="vertical"
    tools:context=".Activities.SignUpActivity">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_10sdp"
        android:paddingLeft="@dimen/_4sdp"
        android:paddingRight="@dimen/_4sdp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <ImageView
            android:id="@+id/home_menu"
            android:layout_width="@dimen/_26sdp"
            android:layout_height="@dimen/_18sdp"
            android:layout_marginStart="4sp"
            android:onClick="backActivity"
            android:src="@drawable/ic_arrow_back_btn"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:tint="@color/m_black" />


    </androidx.constraintlayout.widget.ConstraintLayout>


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="none">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_12sdp"
                android:fontFamily="@font/airbnb_cereal_medium"
                android:gravity="center"
                android:letterSpacing="0.05"
                android:src="@drawable/ic_menu"
                android:text="@string/sign_up"
                android:textAllCaps="true"
                android:textColor="@color/m_black"
                android:textSize="@dimen/_28sdp"
                app:tint="@color/m_black" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/_16sdp"
                android:orientation="vertical"
                android:padding="@dimen/_16sdp">


                <TextView

                    style="@style/CategoryStyle"
                    android:text="@string/name" />

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/nameSign"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_4sdp"
                    android:hint="@string/enter_name"
                    app:boxBackgroundColor="@color/white"
                    app:endIconMode="clear_text"
                    app:endIconTint="@color/m_black">

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="text" />


                </com.google.android.material.textfield.TextInputLayout>

                <TextView
                    style="@style/CategoryStyle"
                    android:text="@string/email" />

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/emailSign"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_4sdp"

                    android:hint="@string/enter_email_address"
                    app:boxBackgroundColor="@color/white"
                    app:endIconMode="clear_text"
                    app:endIconTint="@color/m_black">

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textEmailAddress" />


                </com.google.android.material.textfield.TextInputLayout>


                <TextView
                    style="@style/CategoryStyle"
                    android:text="@string/phone_number" />

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/phoneSign"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_4sdp"
                    android:hint="@string/enter_phone_number"
                    app:boxBackgroundColor="@color/white"
                    app:endIconMode="clear_text"
                    app:endIconTint="@color/m_black">

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textPhonetic" />


                </com.google.android.material.textfield.TextInputLayout>

                <TextView
                    style="@style/CategoryStyle"
                    android:text="@string/password" />

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/passwordSignUp"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_4sdp"
                    android:hint="@string/enter_password"
                    app:boxBackgroundColor="@color/white"
                    app:endIconMode="clear_text"
                    app:endIconTint="@color/m_black">

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textPassword" />


                </com.google.android.material.textfield.TextInputLayout>


                <Button
                    android:id="@+id/submitDetailsSign"
                    android:layout_width="@dimen/_135sdp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="@dimen/_36sdp"
                    android:background="@drawable/background_btn"
                    android:minWidth="@dimen/_100sdp"
                    android:text="@string/save"
                    android:textAllCaps="true"
                    android:textColor="@color/white"
                    app:backgroundTint="@color/m_black" />


            </LinearLayout>
        </LinearLayout>

    </ScrollView>


</LinearLayout>