<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/Primary_Color"
    android:orientation="vertical"
    tools:context=".Activities.LoginActivity">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_10sdp"
        android:paddingLeft="@dimen/_4sdp"
        android:paddingRight="@dimen/_4sdp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <ImageView
            android:id="@+id/home_menu"
            android:layout_width="@dimen/_26sdp"
            android:layout_height="@dimen/_18sdp"
            android:layout_marginStart="4sp"
            android:src="@drawable/ic_arrow_back_btn"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:tint="@color/m_black" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/airbnb_cereal_medium"
            android:letterSpacing="0.1"
            android:src="@drawable/ic_menu"
            android:text="Login"
            android:textAllCaps="true"
            android:textColor="@color/m_black"
            android:textSize="@dimen/_22sdp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:tint="@color/m_black" />


    </androidx.constraintlayout.widget.ConstraintLayout>


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="none">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">


            <com.google.android.material.imageview.ShapeableImageView
                android:id="@+id/profilePic"
                android:layout_width="@dimen/_127sdp"
                android:layout_height="@dimen/_120sdp"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/_30sdp"
                android:scaleType="centerCrop"
                android:src="@drawable/owner"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:shapeAppearanceOverlay="@style/corner_shape" />


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_8sdp"
                android:layout_marginBottom="@dimen/_16sdp"
                android:orientation="vertical"
                android:padding="@dimen/_16sdp">

                <TextView
                    style="@style/CategoryStyle"
                    android:text="@string/email" />

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/emailLogin"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_4sdp"

                    android:hint="@string/enter_email_address"
                    app:boxBackgroundColor="@color/white"
                    app:endIconMode="clear_text"
                    app:endIconTint="@color/m_black">

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textEmailAddress" />


                </com.google.android.material.textfield.TextInputLayout>


                <TextView

                    style="@style/CategoryStyle"
                    android:text="@string/password" />

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/passwordLogin"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_4sdp"
                    android:hint="@string/enter_password"
                    app:boxBackgroundColor="@color/white"
                    app:endIconMode="password_toggle"
                    app:endIconTint="@color/m_black">

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="text" />


                </com.google.android.material.textfield.TextInputLayout>


                <Button
                    android:id="@+id/submitDetailsLog"
                    android:layout_width="@dimen/_145sdp"
                    android:layout_height="wrap_content"
                    android:onClick="login"
                    android:layout_gravity="center"
                    android:layout_marginTop="@dimen/_36sdp"
                    android:background="@drawable/background_btn"
                    android:minWidth="@dimen/_100sdp"
                    android:text="@string/save"
                    android:textAllCaps="true"
                    android:textColor="@color/white" />


                <Button
                    android:id="@+id/forgotPassLogin"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="@dimen/_4sdp"
                    android:background="#0000"
                    android:fontFamily="@font/airbnb_cereal_medium"
                    android:text="Forgot Password ?"
                    android:textColor="@color/gprimary"
                    android:textSize="@dimen/_10sdp" />


                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="@dimen/_18sdp"
                    android:orientation="horizontal"
                    android:padding="@dimen/_4sdp">


                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Don't have an account yet?"
                        android:textColor="@color/m_black"
                        android:textSize="@dimen/_10sdp" />

                    <TextView
                        android:id="@+id/signupLoginBtn"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/_4sdp"
                        android:layout_weight="1"
                        android:onClick="signUp"
                        android:text="Signup here"
                        android:textColor="@color/gprimary"
                        android:textSize="@dimen/_12sdp" />

                </LinearLayout>


            </LinearLayout>
        </LinearLayout>

    </ScrollView>


</LinearLayout>